# plexus

./: .gitignore  AGENTS.md  README.md
.claude/: settings.local.json
.claude/rules/: backend-testing.md  python-best-practices.md
.git-hooks/: post-checkout  worktree-copy-files.txt
.github/ISSUE_TEMPLATE/: requirements.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci-gateway.yml  ci-ingest.yml  deploy-backend.yml  job-ingest-spotify.yml  opencode-review-back.yml  (+2 more)
docs/: CONCEPT.ja.md  CONCEPT.md  session-crud.md
frontend/: .env.example  .gitignore  README.md  RELEASES.md  build.gradle.kts  capacitor.config.ts  eslint.config.mjs  gradle.properties  index.html  package-lock.json  package.json  settings.gradle.kts  tsconfig.node.json  vite.config.ts  vitest.config.ts
gateway/: .env.example  README.md  __init__.py  config.py  dependencies.py  main.py  pyproject.toml
gateway/api/: __init__.py  push.py  terminal.py
gateway/deploy/: install.sh  plexus  plexus-gateway.service.tmpl
gateway/domain/: __init__.py  models.py
gateway/infrastructure/: __init__.py  auth.py  database.py  repositories.py  tmux.py
gateway/services/: __init__.py  fcm_service.py  pty_manager.py  websocket_handler.py
gateway/tests/: __init__.py  conftest.py
gateway/tests/integration/: test_terminal_api.py
gateway/tests/unit/: __init__.py  test_auth.py  test_config.py  test_database.py  test_fcm_service.py  test_models.py  test_pty_manager.py  test_push_api.py  test_repositories.py  test_terminal_api.py  test_terminal_ws_token_api.py  test_tmux.py  test_websocket_handler.py
(+605 files in other folders)
