[project]
name = "gateway"
version = "0.1.0"
description = "Terminal Gateway for mobile tmux access"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.12.0",
    "firebase-admin>=6.5.0",
    "duckdb>=1.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.0",
]
